--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^8.5.0",
     "next": "13.1.4",
     "react": "18.2.0",
+    "react-aria": "^3.22.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
     "react-icon": "^1.0.0",
