--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,14 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
+    "babel-runtime": "^6.26.0",
     "dotenv": "^16.0.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "framer-motion": "^8.5.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.4",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-aria": "^3.22.0",
     "react-dom": "18.2.0",
@@ -30,7 +33,10 @@
     "react-icon": "^1.0.0",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
-    "typescript": "4.9.4"
+    "react-toastify": "^9.1.1",
+    "tailwind-merge": "^1.9.1",
+    "typescript": "4.9.4",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "tailwindcss": "^3.2.4"
